[package]
name = 'rst'
version = '0.2.0'
authors = [ 'Phil Schaf <flying-sheep@web.de>' ]

description = 'a reStructuredText parser and renderer'
license = 'MIT OR Apache-2.0'

documentation = 'https://flying-sheep.github.io/rust-rst'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst.git'

edition = '2018'

[lib]
name = "rst"
path = "src/lib.rs"

[[bin]]
name = "rst"
path = "src/bin.rs"

[dependencies]
url = '1.7.1'
bitflags = '1.0.4'
unicode_categories = '0.1.1'
pest = '2.0.2'
pest_derive = '2.0.1'
serde = '1.0.80'
serde_json = '1.0.32'

quicli = '0.3.1'
structopt = '0.2.12'
clap = '2.32.0'
