[package]
name = 'rst'
version = '0.2.0'
authors = [ 'Phil Schaf <flying-sheep@web.de>' ]

description = 'a reStructuredText parser and renderer'
license = 'MIT OR Apache-2.0'

documentation = 'https://flying-sheep.github.io/rust-rst'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst.git'

edition = '2018'

[lib]
name = "rst"
path = "src/lib.rs"

[[bin]]
name = "rst"
path = "src/bin.rs"

[dependencies]
failure = '0.1.3'
failure_derive = '0.1.3'
url = '1.7.2'
bitflags = '1.0.4'
unicode_categories = '0.1.1'
pest        = { git = 'https://github.com/flying-sheep/pest', branch = 'the-future' }
pest_derive = { git = 'https://github.com/flying-sheep/pest', branch = 'the-future' }
serde = '1.0.80'
serde_json = '1.0.33'

quicli = '0.3.1'
structopt = '0.2.13'
clap = '2.32.0'
