[package]
name = 'rst'
version = '0.2.0'
authors = [ 'Phil Schaf <flying-sheep@web.de>' ]

description = 'a reStructuredText parser and renderer'
license = 'MIT OR Apache-2.0'

documentation = 'https://flying-sheep.github.io/rust-rst'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst.git'

edition = '2018'
build = 'build.rs'

[lib]
name = 'rst'
path = 'src/lib.rs'

[[bin]]
name = 'rst'
path = 'src/bin.rs'

[dependencies]
failure = '0.1.5'
failure_derive = '0.1.5'
url = '1.7.2'
regex = '1.1.3'
bitflags = '1.0.4'
unicode_categories = '0.1.1'
pest = '2.1.0'
pest_derive = '2.1.0'
serde = '1.0.89'
serde_derive = '1.0.89'
serde_json = '1.0.39'
serde-xml-rs = '0.3.1'

quicli = '0.4.0'
structopt = '0.2.15'
clap = '2.32.0'

[dev-dependencies]
pretty_assertions = '0.6.1'
