[package]
name = 'document_tree'
version = '0.4.0'
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2018'
description = 'reStructuredText’s DocumentTree representation'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://docs.rs/document_tree'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst'

[dependencies]
failure = '0.1.6'
regex = '1.3.1'
url = '2.1.0'
serde = '1.0.104'
serde_derive = '1.0.104'
