[package]
name = 'document_tree'
version = "0.4.2"
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2024'
description = 'reStructuredText’s DocumentTree representation'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://docs.rs/document_tree'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst'

[dependencies]
anyhow = '1.0.86'
regex = '1.5.5'
url = '2.1.0'
serde = '1.0.104'
serde_derive = '1.0.104'
linearize = { version = "0.1.4", features = ["derive"] }
schemars = "1.0.0-alpha.17"
