[package]
name = 'rst_parser'
version = "0.4.1"
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2024'
description = 'a reStructuredText parser'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://docs.rs/rst_parser'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst'

[dependencies]
document_tree = { path = '../document_tree', version = "0.4.1" }

anyhow = '1.0.86'
pest = '2.1.2'
pest_derive = '2.1.0'
