[package]
name = 'rst_renderer'
version = '0.4.0'
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2018'
description = 'a reStructuredText renderer'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://docs.rs/rst_renderer'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst'

[dependencies]
document_tree = { path = '../document_tree', version = '0.4.0' }

failure = '0.1.6'
serde_json = '1.0.44'
serde-xml-rs = '0.5'

[dev-dependencies]
rst_parser = { path = '../parser' }

pretty_assertions = '0.6.1'
