[package]
name = 'rst_renderer'
version = "0.4.2"
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2024'
description = 'a reStructuredText renderer'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://docs.rs/rst_renderer'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst'

[dependencies]
document_tree = { path = '../document_tree', version = "0.4.2" }

anyhow = '1.0.86'
serde_json = '1.0.44'
serde-xml-rs = '0.5'
schemars = "1.0.0-alpha.17"

[dev-dependencies]
rst_parser = { path = '../parser' }

pretty_assertions = '1.4.1'
