[package]
name = 'rst'
version = "0.4.2"
authors = ['Philipp A. <flying-sheep@web.de>']
edition = '2024'
description = 'a reStructuredText parser and renderer for the command line'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

documentation = 'https://github.com/flying-sheep/rust-rst#readme'
homepage = 'https://github.com/flying-sheep/rust-rst'
repository = 'https://github.com/flying-sheep/rust-rst'

[dependencies]
rst_renderer = { path = '../renderer', version = "0.4.2" }
rst_parser = { path = '../parser', version = "0.4.2" }

anyhow = '1.0.86'
clap = { version = '4', features = ['derive'] }
clap-verbosity-flag = '2.2.1'
env_logger = '0.11.5'
log = '0.4.22'
